--- a/themes/mall/default/styles/default/css/base.css
+++ b/themes/mall/default/styles/default/css/base.css
@@ -208,7 +208,7 @@ html {
 
 
 /*-------------菜单---------------*/
-.menubox{ width:100%; height:36px; background:url(../img/menubg.jpg); margin-top:20px;}
+.menubox{ width:100%; height:36px; background-color: #ff4200; margin-top:20px;}
 /*菜单列表*/
 .menulist{ width:1005px; margin:0 auto; height:36px; line-height:36px; font-size:14px;}
 .menulist a{ text-decoration:none; color:#fff; width:83px; height:36px; float:left; display:block; text-align: center}
