--- a/themes/mall/default/styles/default/css/base.css
+++ b/themes/mall/default/styles/default/css/base.css
@@ -186,7 +186,7 @@ html {
 .stext{ width:270px; height:32px;  float:left; }
 .textcss{border:2px solid #a94b13; height:30px; line-height:30px; color:#999; font-size:12px; width:267px; background: url(../img/fd.jpg) no-repeat  left; padding-left:25px}
 .sbtnbox{ width:69px; height:34px; float:right; }
-.btncss{ width:69px; height:34px; background:#a94b13; border:0px; font-size:14px; line-height:34px; font-weight:bold; color:#fff}
+.btncss{ width:69px; height:34px; background:#ff4200; border:0px; font-size:14px; line-height:34px; font-weight:bold; color:#fff}
 
 /*Ã÷ÐÇµêÆÌ*/
 .starbox{ width:200px; float: right; margin-right:10px; display:inline ; margin-top:10px;}
