--- a/themes/mall/default/styles/default/css/base.css
+++ b/themes/mall/default/styles/default/css/base.css
@@ -176,7 +176,7 @@ html {
 .typebox{ width:360px; float:left;  margin-left:28px; display:inline}
 .libox{ width:340px; float:left; font-size:12px; color:#333;}
 .libox li{ width:40px; height:20px; line-height:20px; text-align:center; display:block; float:left}
-.libox .hot{ width:40px; height:20px; background:#a94b13; color:#fff; font-weight:bold}
+.libox .hot{ width:40px; height:20px; background:#ff4200; color:#fff; font-weight:bold}
 .libox .hot a{ color:#fff}
 .libox li a{ color:#333}
 
@@ -184,7 +184,7 @@ html {
 .sbg{ width:365px; height:40px; float:left; margin-top:-1px; position: relative}
 
 .stext{ width:270px; height:32px;  float:left; }
-.textcss{border:2px solid #a94b13; height:30px; line-height:30px; color:#999; font-size:12px; width:267px; background: url(../img/fd.jpg) no-repeat  left; padding-left:25px}
+.textcss{border:2px solid #ff4200; height:30px; line-height:30px; color:#999; font-size:12px; width:267px; background: url(../img/fd.jpg) no-repeat  left; padding-left:25px}
 .sbtnbox{ width:69px; height:34px; float:right; }
 .btncss{ width:69px; height:34px; background:#ff4200; border:0px; font-size:14px; line-height:34px; font-weight:bold; color:#fff}
 
