--- a/external/modules/datacall/templates/admin/footer.html
+++ b/external/modules/datacall/templates/admin/footer.html
@@ -1,4 +1,4 @@
-<p id="page_footer">Copyright 2012-2020 璞胜创投 Inc.,All rights reserved.博珏科技提供技术支持</p>
+<p id="page_footer"></p>
 {$async_sendmail}
 </body>
 </html>
