--- a/psadmin/templates/footer.html
+++ b/psadmin/templates/footer.html
@@ -1,5 +1,4 @@
-<p id="page_footer">Copyright 2012-2020 璞胜创投 Inc.,All rights reserved.博珏科技提供技术支持
-<p> {$async_sendmail} 
+<p id="page_footer"></p> {$async_sendmail}
 
 
 
