--- a/psadmin/templates/index.html
+++ b/psadmin/templates/index.html
@@ -31,7 +31,7 @@ var menu = {$menu_json};
     <div class="close_float"><img src="templates/style/images/close2.gif" /></div>
 </div>
 <div id="head">
-    <div id="logo"><a href="index.php"><img src="templates/style/images/logo.gif" alt="复元商城" /></a></div>
+    <div id="logo"><a href="index.php" style="font-size: 30px; font-weight: bold; text-decoration: none; color: #000">管理控台</a></div>
     <div id="menu"><span>{$lang.hello}<strong>{$visitor.user_name}</strong> <a href="index.php?act=logout">[{$lang.logout}]</a> <a href="{$site_url}/index.php" target="_blank">[{$lang.ecmall_index}]</a></span>
     <a href="javascript:;" class="menu_btn1" id="iframe_refresh">{$lang.refresh}</a>
     <a href="javascript:;" class="menu_btn2" id="clear_cache">{$lang.clear_cache}</a>
