--- a/psadmin/templates/style/admin.css
+++ b/psadmin/templates/style/admin.css
@@ -27,7 +27,7 @@ html,body {padding: 0;margin: 0; overflow-x:hidden; overflow-y:auto;}
 .close_float { position: absolute; bottom: 7px; right: 7px; z-index: 3;}
 
 #head {height: 100px; background: url(images/head.gif); position: relative;}
-#logo {width: 98px; height: 68px; position: absolute; top: 16px; left: 30px; z-index: 2;}
+#logo { height: 68px; position: absolute; top: 30px; left: 30px; z-index: 2;}
 #menu {position: absolute; top: 14px; right: 22px; z-index: 2; word-spacing: 5px; color: #234f8d;}
 #menu span {position: relative; bottom: -3px; display: block; float: left; margin-right: 5px;}
 #menu a {color: #234f8d; text-decoration: none;}
