--- a/psadmin/templates/ts_edit.html
+++ b/psadmin/templates/ts_edit.html
@@ -49,9 +49,9 @@
                   Í¶ËßÖ¤¾Ý</th> 
                 <td class="paddingT15 wordSpacing5">
 				
-                   <!--{if $com.imag_1}--><img src="{$site.url}/{$com.imag_1}" width="100"/> <!--{/if}--><br />
-				   <!--{if $com.imag_2}--><img src="{$site.url}/{$com.imag_2}" width="100"/><!--{/if}--><br />
-				   <!--{if $com.imag_3}--><img src="{$site.url}/{$com.imag_3}" width="100"/><!--{/if}-->
+                   <!--{if $com.imag_1}--><img src="{$com.imag_1}" width="100"/> <!--{/if}--><br />
+				   <!--{if $com.imag_2}--><img src="{$com.imag_2}" width="100"/><!--{/if}--><br />
+				   <!--{if $com.imag_3}--><img src="{$com.imag_3}" width="100"/><!--{/if}-->
                 </td>
             </tr>
 			<tr>
