--- a/psadmin/templates/ts_shenhe.html
+++ b/psadmin/templates/ts_shenhe.html
@@ -90,7 +90,7 @@ $(function(){
 				</tr>
 				<!--{foreach from=$or item=val}-->
 				<tr>
-				<td><a href="/index.php?app=goods&id={$val.goods_id}" target="_blank"><img src="/{$val.goods_image}" width="100"/></a></td><td align="center">{$val.goods_name}<br />  {$val.specification}</td><td align="left">{$val.quantity}</td><td align="left">{$val.jifen}</td>
+				<td><a href="/index.php?app=goods&id={$val.goods_id}" target="_blank"><img src="{$val.goods_image}" width="100"/></a></td><td align="center">{$val.goods_name}<br />  {$val.specification}</td><td align="left">{$val.quantity}</td><td align="left">{$val.jifen}</td>
 				 </tr>
 				 <!--{/foreach}--> 
 				 </table>
@@ -109,9 +109,9 @@ $(function(){
                   投诉证据:</th> 
                 <td class="paddingT15 wordSpacing5">
 				
-                   <!--{if $com.imag_1}--><a href="/{$com.imag_1}" target="_blank"><img src="/{$com.imag_1}" width="100"/></a> <!--{/if}--><br />
-				   <!--{if $com.imag_2}--><a href="/{$com.imag_2}" target="_blank"><img src="/{$com.imag_2}" width="100"/></a><!--{/if}--><br />
-				   <!--{if $com.imag_3}--><a href="/{$com.imag_3}" target="_blank"><img src="/{$com.imag_3}" width="100"/></a><!--{/if}-->
+                   <!--{if $com.imag_1}--><a href="{$com.imag_1}" target="_blank"><img src="{$com.imag_1}" width="100"/></a> <!--{/if}--><br />
+				   <!--{if $com.imag_2}--><a href="{$com.imag_2}" target="_blank"><img src="{$com.imag_2}" width="100"/></a><!--{/if}--><br />
+				   <!--{if $com.imag_3}--><a href="{$com.imag_3}" target="_blank"><img src="{$com.imag_3}" width="100"/></a><!--{/if}-->
                 </td>
             </tr>
 			<tr>
@@ -161,9 +161,9 @@ $(function(){
                   申诉证据:</th> 
                 <td class="paddingT15 wordSpacing5">
 				
-                   <!--{if $shs.imag_1}--><a href="/{$shs.imag_1}" target="_blank"><img src="/{$shs.imag_1}" width="100"/></a> <!--{/if}--><br />
-				   <!--{if $shs.imag_2}--><a href="/{$shs.imag_2}" target="_blank"><img src="/{$shs.imag_2}" width="100"/></a><!--{/if}--><br />
-				   <!--{if $shs.imag_3}--><a href="/{$shs.imag_3}" target="_blank"><img src="/{$shs.imag_3}" width="100"/></a><!--{/if}-->
+                   <!--{if $shs.imag_1}--><a href="{$shs.imag_1}" target="_blank"><img src="{$shs.imag_1}" width="100"/></a> <!--{/if}--><br />
+				   <!--{if $shs.imag_2}--><a href="{$shs.imag_2}" target="_blank"><img src="{$shs.imag_2}" width="100"/></a><!--{/if}--><br />
+				   <!--{if $shs.imag_3}--><a href="{$shs.imag_3}" target="_blank"><img src="{$shs.imag_3}" width="100"/></a><!--{/if}-->
                 </td>
             </tr>
 			<tr>
